--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="The Bookstore" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://62a93b70fe37e31fbe77e407--lively-monstera-feb65c.netlify.app/" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/70589265/174413723-b66a80e9-987a-4164-a87d-7c62bfaece4d.png" />
     <meta
       name="description"
       content="Web site created using create-react-app"
